--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -11,7 +11,7 @@ html {
 }
 
 .header {
-  padding: 4px 16px;
+  padding: 4px 28px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -81,7 +81,8 @@ html {
     .aside__form {
       .form__new-chat-button {
         position: relative;
-        margin: 24px 0;
+        margin: 32px 0;
+        margin-bottom: 48px;
         padding: 8px 0;
         text-align: center;
         color: $color-basic-white;
@@ -148,7 +149,7 @@ html {
         border-radius: 8px;
         border-color: $color-basic-white;
         border-style: solid;
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: rgba(255, 255, 255, 0.4);
         outline: none;
         transition: ease border-color 0.3s;
 
@@ -159,8 +160,8 @@ html {
     }
 
     .aside__list {
-      margin-top: 24px;
-      height: calc(100vh - 240px);
+      margin-top: 32px;
+      height: calc(100vh - 300px);
       overflow: auto;
 
       .list-item {
@@ -199,7 +200,95 @@ html {
   }
 
   .main__main {
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
-    // background-color: #000;
+
+    .main__article {
+      flex-grow: 1;
+      background: #eee;
+    }
+
+    .main__form {
+      padding: 16px;
+      height: 160px;
+
+      .form__question {
+        position: relative;
+        margin: 0 auto;
+        width: 80%;
+        min-width: 320px;
+
+        &::before {
+          position: absolute;
+          top: 8px;
+          left: 16px;
+          display: block;
+          width: 16px;
+          height: 16px;
+          background-image: url("../images/pencil.svg");
+          background-position: center;
+          background-size: contain;
+          background-repeat: no-repeat;
+          content: "";
+        }
+
+        .question__textarea {
+          padding: 8px;
+          padding-left: 36px;
+          padding-right: 64px;
+          width: 100%;
+          border-radius: 8px;
+          border-color: $color-basic-white;
+          border-style: solid;
+          background-color: rgba(255, 255, 255, 0.4);
+          -webkit-box-shadow: 0px 6px 20px -4px rgba(74, 118, 218, 0.8);
+          -moz-box-shadow: 0px 6px 20px -4px rgba(74, 118, 218, 0.8);
+          box-shadow: 0px 6px 20px -4px rgba(74, 118, 218, 0.8);
+          outline: none;
+          resize: none;
+          transition: ease border-color 0.3s;
+
+          &:focus {
+            border-color: $color-primary;
+          }
+        }
+
+        .question__submit-button {
+          position: absolute;
+          bottom: 8px;
+          right: 8px;
+          width: 60px;
+          height: 40px;
+          color: $color-basic-white;
+          border-radius: 4px;
+          background-color: $color-primary;
+          -webkit-box-shadow: inset 0px 0px 8px 0px rgba(255, 255, 255, 1);
+          -moz-box-shadow: inset 0px 0px 8px 0px rgba(255, 255, 255, 1);
+          box-shadow: inset 0px 0px 8px 0px rgba(255, 255, 255, 1);
+          cursor: pointer;
+          transition: ease background-color 0.3s;
+
+          &:hover {
+            background-color: $color-primary-activated;
+          }
+
+          &::before {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            display: block;
+            width: 16px;
+            height: 16px;
+            background-image: url("../images/right-arrow.svg");
+            background-position: center;
+            background-size: 150%;
+            background-repeat: no-repeat;
+            content: "";
+            transform: translate(-50%, -50%);
+          }
+        }
+      }
+    }
   }
 }
