--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -250,23 +250,21 @@ html {
 
     .main__form {
       padding: 16px;
-      height: 160px;
-      min-height: 160px;
+      height: 96px;
 
       .form__question {
         position: relative;
         margin: 0 auto;
-        width: 80%;
-        min-width: 320px;
+        width: 60%;
 
-        &::before {
+        &::after {
           position: absolute;
           top: 8px;
-          left: 16px;
+          right: 8px;
           display: block;
-          width: 16px;
-          height: 16px;
-          background-image: url("../images/pencil.svg");
+          width: 32px;
+          height: 32px;
+          background-image: url("../images/send.png");
           background-position: center;
           background-size: contain;
           background-repeat: no-repeat;
@@ -274,58 +272,15 @@ html {
         }
 
         .question__textarea {
-          padding: 8px;
-          padding-left: 36px;
-          padding-right: 64px;
+          padding: 12px 60px 8px 12px;
           width: 100%;
           border-radius: 8px;
-          border-color: $color-basic-white;
-          border-style: solid;
-          -webkit-box-shadow: 0px 6px 20px -4px rgba(74, 118, 218, 0.8);
-          -moz-box-shadow: 0px 6px 20px -4px rgba(74, 118, 218, 0.8);
-          box-shadow: 0px 6px 20px -4px rgba(74, 118, 218, 0.8);
+          border: 1px solid #e5e5e5;
+          -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+          -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
           outline: none;
           resize: none;
-          transition: ease border-color 0.3s;
-
-          &:focus {
-            border-color: $color-primary;
-          }
-        }
-
-        .question__submit-button {
-          position: absolute;
-          bottom: 8px;
-          right: 8px;
-          width: 60px;
-          height: 40px;
-          color: $color-basic-white;
-          border-radius: 4px;
-          background-color: $color-primary;
-          -webkit-box-shadow: inset 0px 0px 8px 0px rgba(255, 255, 255, 1);
-          -moz-box-shadow: inset 0px 0px 8px 0px rgba(255, 255, 255, 1);
-          box-shadow: inset 0px 0px 8px 0px rgba(255, 255, 255, 1);
-          cursor: pointer;
-          transition: ease background-color 0.3s;
-
-          &:hover {
-            background-color: $color-primary-activated;
-          }
-
-          &::before {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            display: block;
-            width: 16px;
-            height: 16px;
-            background-image: url("../images/right-arrow.svg");
-            background-position: center;
-            background-size: 150%;
-            background-repeat: no-repeat;
-            content: "";
-            transform: translate(-50%, -50%);
-          }
         }
       }
     }
