--- a/src/assets/styles/helper.scss
+++ b/src/assets/styles/helper.scss
@@ -13,3 +13,11 @@ $font-song: Georgia, "Nimbus Roman No9 L", "Songti SC", "Noto Serif CJK SC",
 $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti,
   "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE",
   "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
+
+$color-basic-white: #ffffff;
+$color-basic-black: #202123;
+$color-primary: #4a76da;
+$color-primary-activated: #3863c6;
+$color-primary-light: #bdcce9;
+$color-level-1-border: #4f4f4f;
+$color-primary-text: #4f4f4f;
