--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,13 +1,6 @@
 @import "./helper.scss";
 
-$header-height: 0px;
-$color-basic-white: #ffffff;
-$color-basic-black: #202123;
-$color-primary: #4a76da;
-$color-primary-activated: #3863c6;
-$color-primary-light: #bdcce9;
-$color-level-1-border: #4f4f4f;
-$color-primary-text: #4f4f4f;
+$header-height: 48px;
 
 html {
   font-size: 16px;
@@ -21,44 +14,135 @@ html {
   height: $header-height;
   font-family: $font-hei;
 
-  .header__anchor {
-    height: 100%;
+  .header__menu {
+    position: relative;
+    width: 48px;
+    height: 48px;
+    background-image: url("../images/menu.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
 
-    .h1 {
+    .menu__h1 {
       display: none;
     }
 
-    .anchor__logo-name {
-      height: 100%;
+    .menu__nav {
+      position: absolute;
+      top: $header-height;
+      left: 8px;
+      padding: 16px 8px;
+      padding-bottom: 0;
+      display: none;
+      width: 260px;
+      height: 240px;
+      font-size: 14px;
+      border-radius: 4px;
+      background-color: $color-basic-black;
+
+      &.visible {
+        display: block;
+      }
+
+      &::before {
+        position: absolute;
+        top: -16px;
+        left: 8px;
+        width: 0;
+        height: 0;
+        border: 8px solid transparent;
+        border-bottom: 8px solid $color-basic-black;
+        content: "";
+      }
+
+      .nav__list {
+        max-height: 160px;
+        overflow: auto;
+        border-bottom: 1px solid $color-level-1-border;
+
+        .list-item {
+          position: relative;
+          padding-left: 36px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          border-radius: 4px;
+          cursor: default;
+
+          &:hover {
+            background-color: #343540;
+          }
+
+          &::before {
+            position: absolute;
+            top: 50%;
+            left: 8px;
+            display: block;
+            width: 24px;
+            height: 24px;
+            background-image: url("../images/chat-plain.png");
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            content: "";
+            transform: translateY(-50%);
+          }
+
+          &.active {
+            background-color: #343540;
+
+            .list-item__button-wrapper {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+
+              .button-wrapper__download {
+                width: 24px;
+                height: 24px;
+                background-image: url("../images/download.png");
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                cursor: pointer;
+              }
+
+              .button-wrapper__delete {
+                width: 24px;
+                height: 24px;
+                background-image: url("../images/delete.png");
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                cursor: pointer;
+              }
+            }
+          }
+
+          .list-item__text {
+            display: -webkit-box;
+            width: 120px;
+            overflow: hidden;
+            line-height: 40px;
+            color: $color-basic-white;
+            text-overflow: ellipsis;
+            word-break: break-all;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+          }
+        }
+      }
     }
   }
 
-  .header__user {
-    padding-left: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: $color-basic-white;
-    background-image: url("../images/user.svg");
-    background-position: 42px;
-    background-size: 16px;
+  .header__new-chat {
+    width: 48px;
+    height: 48px;
+    background-image: url("../images/add.png");
+    background-position: center;
+    background-size: contain;
     background-repeat: no-repeat;
-
-    .user__menu {
-      padding: 0 8px;
-      cursor: pointer;
-      visibility: hidden;
-    }
-
-    .user__sign-in {
-      padding: 0 8px;
-      cursor: pointer;
-    }
-
-    .user__login {
-      padding: 0 8px;
-      cursor: pointer;
-    }
+    cursor: pointer;
   }
 }
 
@@ -68,123 +152,7 @@ html {
   height: calc(var(--vh, 1vh) * 100 - $header-height);
 
   .main__aside {
-    padding: 16px 8px;
-    padding-bottom: 0;
-    width: 260px;
-    font-size: 14px;
-    background-color: $color-basic-black;
-
-    .aside__new-chat-button {
-      position: relative;
-      padding: 14px 0;
-      padding-left: 40px;
-      color: $color-basic-white;
-      border: 1px solid $color-level-1-border;
-      border-radius: 4px;
-      cursor: pointer;
-
-      &::before {
-        position: absolute;
-        top: 50%;
-        left: 16px;
-        display: block;
-        width: 10px;
-        height: 2px;
-        background-color: $color-basic-white;
-        content: "";
-        transform: translateY(-50%);
-      }
-
-      &::after {
-        position: absolute;
-        top: 50%;
-        left: 20px;
-        display: block;
-        width: 2px;
-        height: 10px;
-        background-color: $color-basic-white;
-        content: "";
-        transform: translateY(-50%);
-      }
-    }
-
-    .aside__list {
-      margin-top: 16px;
-      height: calc(var(--vh) * 100 - 280px);
-      overflow: auto;
-      border-bottom: 1px solid $color-level-1-border;
-
-      .list-item {
-        position: relative;
-        padding-left: 36px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-radius: 4px;
-        cursor: default;
-
-        &:hover {
-          background-color: #343540;
-        }
-
-        &::before {
-          position: absolute;
-          top: 50%;
-          left: 8px;
-          display: block;
-          width: 24px;
-          height: 24px;
-          background-image: url("../images/chat-plain.png");
-          background-position: center;
-          background-size: contain;
-          background-repeat: no-repeat;
-          content: "";
-          transform: translateY(-50%);
-        }
-
-        &.active {
-          background-color: #343540;
-
-          .list-item__button-wrapper {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .button-wrapper__download {
-              width: 24px;
-              height: 24px;
-              background-image: url("../images/download.png");
-              background-position: center;
-              background-size: contain;
-              background-repeat: no-repeat;
-              cursor: pointer;
-            }
-
-            .button-wrapper__delete {
-              width: 24px;
-              height: 24px;
-              background-image: url("../images/delete.png");
-              background-position: center;
-              background-size: contain;
-              background-repeat: no-repeat;
-              cursor: pointer;
-            }
-          }
-        }
-
-        .list-item__text {
-          display: -webkit-box;
-          width: 120px;
-          overflow: hidden;
-          line-height: 40px;
-          color: $color-basic-white;
-          text-overflow: ellipsis;
-          word-break: break-all;
-          -webkit-line-clamp: 1;
-          -webkit-box-orient: vertical;
-        }
-      }
-    }
+    display: none;
   }
 
   .main__main {
@@ -195,9 +163,11 @@ html {
     .main__article {
       flex: 1;
       overflow: auto;
+      border-top: 1px solid #eee;
+      border-bottom: 1px solid #eee;
 
       .article__section {
-        padding: 24px 0;
+        padding: 16px 0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -218,7 +188,7 @@ html {
 
         .section__content-wrapper {
           display: flex;
-          width: 60%;
+          width: 90%;
 
           .content-wrapper__profile {
             margin-right: 16px;
@@ -250,12 +220,12 @@ html {
 
     .main__form {
       padding: 16px;
-      height: 96px;
+      padding-bottom: 24px;
 
       .form__question {
         position: relative;
         margin: 0 auto;
-        width: 60%;
+        width: 90%;
 
         &::after {
           position: absolute;
@@ -272,7 +242,7 @@ html {
         }
 
         .question__textarea {
-          padding: 12px 60px 8px 12px;
+          padding: 8px 56px 8px 8px;
           width: 100%;
           border-radius: 8px;
           border: 1px solid #e5e5e5;
