--- a/src/assets/styles/media.css
+++ b/src/assets/styles/media.css
@@ -7,6 +7,7 @@
 
   .chat-header {
     height: var(--header-height);
+    display: none;
   }
 
   .chat-header .chat-header__menu .chat-header__menu__nav {
