feat(index): 新增登录注册及退出按钮样式

--- a/src/assets/styles/helper.css
+++ b/src/assets/styles/helper.css
@@ -19,6 +19,7 @@
   --color-basic-black: #202123;
   --color-level-1-border: #4f4f4f;
   --color-primary-text: #4f4f4f;
+  --color-plain-text: #888888;
 
   --header-height: 48px;
 }
