--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -38,6 +38,7 @@ html {
   width: 260px;
   height: 240px;
   font-size: 14px;
+  color: var(--color-basic-white);
   border-radius: 4px;
   background-color: var(--color-basic-black);
 }
@@ -58,8 +59,46 @@ html {
 .chat-header
   .chat-header__menu
   .chat-header__menu__nav
+  .chat-header__menu__nav__sign-in-or-up {
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__sign-in-or-up.signed-in {
+  display: none;
+}
+
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__sign-in-or-up
+  .chat-header__menu__nav__sign-in-or-up__logo {
+  width: 32px;
+  height: 32px;
+  background-image: url("../images/profile-plain.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__sign-in-or-up
+  .chat-header__menu__nav__sign-in-or-up__text {
+  margin-left: 4px;
+}
+
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
   .chat-header__menu__nav__list {
-  height: 160px;
+  margin-top: 8px;
+  max-height: 160px;
   overflow: auto;
   border-bottom: 1px solid var(--color-level-1-border);
 }
@@ -163,11 +202,77 @@ html {
   width: 120px;
   overflow: hidden;
   line-height: 40px;
-  color: var(--color-basic-white);
   text-overflow: ellipsis;
   word-break: break-all;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
+}
+
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__bottom-list {
+  padding: 8px;
+}
+
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__bottom-list
+  .list-item {
+  position: relative;
+  padding-left: 36px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  border-radius: 4px;
+  cursor: default;
+}
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__bottom-list
+  .list-item:hover {
+  background-color: #343540;
+}
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__bottom-list
+  .list-item::before {
+  position: absolute;
+  top: 50%;
+  left: 8px;
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  content: "";
+  transform: translateY(-50%);
+}
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__bottom-list
+  .list-item.sign-out::before {
+  background-image: url("../images/sign-out.png");
+}
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__bottom-list
+  .list-item.sign-out {
+  display: none;
+}
+.chat-header
+  .chat-header__menu
+  .chat-header__menu__nav
+  .chat-header__menu__nav__bottom-list
+  .list-item.sign-out.signed-in {
+  display: flex;
 }
 
 .chat-header .chat-header__new-chat {
@@ -287,15 +392,14 @@ html {
   .chat-main__main__form__question {
   position: relative;
   margin: 0 auto;
-  width: 90%;
 }
 .chat-main
   .chat-main__main
   .chat-main__main__form
   .chat-main__main__form__question::after {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 16px;
+  right: 16px;
   display: block;
   width: 32px;
   height: 32px;
@@ -311,13 +415,21 @@ html {
   .chat-main__main__form
   .chat-main__main__form__question
   .chat-main__main__form__question__textarea {
-  padding: 8px 56px 8px 8px;
+  padding: 16px 48px 0 16px;
   width: 100%;
+  color: var(--color-plain-text);
+  outline: none;
+  resize: none;
   border-radius: 8px;
   border: 1px solid #e5e5e5;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
-  outline: none;
-  resize: none;
+}
+.chat-main
+  .chat-main__main
+  .chat-main__main__form
+  .chat-main__main__form__question
+  .chat-main__main__form__question__textarea::placeholder {
+  color: var(--color-plain-text);
 }
