--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -433,3 +433,65 @@ html {
   .chat-main__main__form__question__textarea::placeholder {
   color: var(--color-plain-text);
 }
+
+.chat-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+.chat-mask.visible {
+  display: block;
+}
+
+.chat-mask .chat-mask__dialog {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 280px;
+  height: 280px;
+  border-radius: 4px;
+  background-color: var(--color-basic-white);
+  transform: translate(-50%, -50%);
+}
+
+.chat-mask .chat-mask__dialog .dialog__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+}
+
+.chat-mask .chat-mask__dialog .dialog__header .dialog__header__close {
+  width: 40px;
+  height: 40px;
+  background-image: url("../images/close.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.chat-mask .chat-mask__dialog .dialog__main {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.chat-mask .chat-mask__dialog .dialog__main .dialog__main__qr-code {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 180px;
+}
+
+.chat-mask .chat-mask__dialog .dialog__main .dialog__main__tip {
+  margin: 8px;
+}
