--- a/src/assets/styles/media.css
+++ b/src/assets/styles/media.css
@@ -192,7 +192,7 @@
     align-items: center;
     height: 40px;
     border-radius: 4px;
-    cursor: default;
+    cursor: pointer;
   }
   .chat-main .chat-main__aside .chat-main__aside__bottom-list .list-item:hover {
     background-color: #343540;
@@ -216,14 +216,14 @@
   .chat-main
     .chat-main__aside
     .chat-main__aside__bottom-list
-    .list-item.sign-out::before {
-    background-image: url("../images/sign-out.png");
+    .list-item.sign-out {
+    display: none;
   }
   .chat-main
     .chat-main__aside
     .chat-main__aside__bottom-list
-    .list-item.sign-out {
-    display: none;
+    .list-item.sign-out::before {
+    background-image: url("../images/sign-out.png");
   }
   .chat-main
     .chat-main__aside
